[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/siren/siren.gd" type="Script" id=1]
[ext_resource path="res://scenes/siren/siren_loop.ogg" type="AudioStream" id=2]

[node name="siren" type="Node" index="0"]

script = ExtResource( 1 )

[node name="tween1" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="tween2" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="audio" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 2 )
volume_db = 1.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "siren"

[connection signal="tween_completed" from="tween1" to="." method="_on_tween1_completed"]

[connection signal="tween_completed" from="tween2" to="." method="_on_tween2_completed"]


